# os-sigil-sdk

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
src/os_sigil_sdk/: __init__.py
