[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "os-sigil-sdk"
version = "0.0.1a0"
authors = [
    { name="DeepFeatures Team", email="sho@deepfeatures.ai" }
]
description = "The open-source operating system kernel-bound telemetry engine utilizing Linux eBPF hooks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/deepfeatures-ai/os-sigil-sdk"
"Bug Tracker" = "https://github.com/deepfeatures-ai/os-sigil-sdk/issues"